--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Hello World</title>
+        <title>My Page</title>
     </head>
     <body>
-        <h1>Hello World</h1>
+        <h1>My Page</h1>
 
         <h2>Cat picture</h2>
         <img src="cat.jpeg" alt="cat pic">
@@ -25,7 +25,12 @@
         </iframe>
 
         <h2>Youtube vid Example </h2>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/zTTtd6bnhFs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/zTTtd6bnhFs?start=180" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
         </iframe>
+
+        <h2> Google Map Example </h2>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d671.8641403807857!2d-122.3105205207398!3d47.65612635203884!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x549014f2cd8b9063%3A0x5e0c52ee23f0cc30!2sRed%20Square%2C%20Seattle%2C%20WA%2098105!5e0!3m2!1sen!2sus!4v1633557915760!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy">
+        </iframe>
+
     </body>
 </html>
