--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -1,36 +1,58 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My Page</title>
+        <title>Hathaway's Page</title>
     </head>
-    <body>
-        <h1>My Page</h1>
+    <body style="background-color:papayawhip;">
+        <h1 style="color:pink;text-align:center;">
+          My Page
+        </h1>
 
-        <h2>Cat picture</h2>
-        <img src="cat.jpeg" alt="cat pic">
+        <h2 style="color:crimson;text-align:left;">
+          CAT GIRL
+        </h2>
+        <img src="dancer.jpg" alt="Miqote" usemap="#dancer" width="632" height="820">
+            </object>
+          <map name="dancer">
+            <area shape="rect" coords="34, 44, 400, 700" alt="Miqote" href="https://www.reddit.com/r/ffxiv/comments/g77nb2/miqote_by_momopoco/"
+            onclick="myFunction()">
+          </map>
 
-        <h2>Audio Example</h2>
-        <audio controls>
-            <source src="meowing.mp3" type="audio/mpeg">
-        </audio>
+          <script>
+          function myFunction() {
+              alert("Beautiful Miqo'te in Final Fantasy XIV!");
+          }
+          </script>
+
+        <h2 style="color:Coral;"> ShadowBringers Map Song</h2>
+          <audio controls>
+              <source src="lahee.mp3" type="audio/mpeg">
+          </audio>
 
 
-        <h2>Video Example</h2>
-        <video width="320" height="240" controls>
-            <source src="cat.mp4" type="video/mp4">
-        </video>
+        <h2>Cat Video</h2>
+          <video width="640" height="360" controls>
+              <source src="cat.mp4" type="video/mp4">
+          </video>
 
-        <h2> iFrame Example </h2>
-        <iframe src="https://www.washington.edu/ima/" title="UW Recreation">
-        </iframe>
+        <h2>iFrame Example</h2>
+          <iframe src="https://www.washington.edu/ima/" title="UW Recreation">
+          </iframe>
 
-        <h2>Youtube vid Example </h2>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/zTTtd6bnhFs?start=180" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-        </iframe>
+        <h2 style="color:slateblue;">FFXIV Endwalker Expansion Trailer</h2>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/zTTtd6bnhFs?start=180&autoplay=1&mute=1&loop=1"
+            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+          </iframe>
 
-        <h2> Google Map Example </h2>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d671.8641403807857!2d-122.3105205207398!3d47.65612635203884!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x549014f2cd8b9063%3A0x5e0c52ee23f0cc30!2sRed%20Square%2C%20Seattle%2C%20WA%2098105!5e0!3m2!1sen!2sus!4v1633557915760!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy">
-        </iframe>
+        <h2>UW RedSquare</h2>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d671.8641403807857!2d-122.3105205207398!3d47.65612635203884!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x549014f2cd8b9063%3A0x5e0c52ee23f0cc30!2sRed%20Square%2C%20Seattle%2C%20WA%2098105!5e0!3m2!1sen!2sus!4v1633557915760!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy">
+          </iframe>
 
+        <h2>The object element</h2>
+          <object data="cat.jpeg" alt="cat">
+          </object>
+
+        <h2>RSS Feed</h2>
+          <div id="widgetmain" style="text-align:left;overflow-y:auto;overflow-x:hidden;width:200px;background-color:#transparent; border:1px solid #333333;"><div id="rsswidget" style="height:500px;"><iframe src="http://us1.rssfeedwidget.com/getrss.php?time=1633592172740&amp;x=http%3A%2F%2Frss.news.yahoo.com%2Frss%2Ftopstories&amp;w=200&amp;h=500&amp;bc=333333&amp;bw=1&amp;bgc=transparent&amp;m=20&amp;it=true&amp;t=(default)&amp;tc=333333&amp;ts=15&amp;tb=transparent&amp;il=true&amp;lc=0000FF&amp;ls=14&amp;lb=false&amp;id=true&amp;dc=333333&amp;ds=14&amp;idt=true&amp;dtc=284F2D&amp;dts=12" border="0" hspace="0" vspace="0" frameborder="no" marginwidth="0" marginheight="0" style="border:0; padding:0; margin:0; width:200px; height:500px;" id="rssOutput">Reading RSS Feed ...</iframe></div><div style="text-align:right;margin-bottom:0;border-top:1px solid #333333;" id="widgetbottom"><span style="font-size:70%"><a href="http://www.rssfeedwidget.com">rss feed widget</a>&nbsp;</span><br></div></div>
     </body>
 </html>
